@@ -38,6 +38,13 @@
 <p>2020-10-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawPrimitive): Use DestroyImageList() to
+destroy composite_image since it may be a list.  Fixes oss-fuzz
+25247 &quot;Indirect-leak in MagickMalloc&quot;.</li>
+<li>magick/transform.c (TransformImage): Use ReplaceImageInList()
+replace transformed image in list.</li>
+<li>magick/list.c (ReplaceImageInList): Remove previous and next
+references from removed image before destroying it.</li>
 <li>magick/render.c (DrawClipPath): Remove break statement so that
 added clip-mask image is initialized properly and rendered-on as
 expected.  Thanks to László Böszörményi for reporting this problem
