@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.15.2: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.16: http://docutils.sourceforge.net/" />
 <title>transform</title>
 <link rel="stylesheet" href="../docutils-api.css" type="text/css" />
 </head>
@@ -37,7 +37,7 @@
 <h2 class="subtitle" id="crop-flip-flop-roll-coalesce-etc">Crop, flip, flop, roll, coalesce, etc.</h2>
 
 <div class="contents topic" id="contents">
-<p class="topic-title first">Contents</p>
+<p class="topic-title">Contents</p>
 <ul class="simple">
 <li><a class="reference internal" href="#chopimage" id="id23">ChopImage</a></li>
 <li><a class="reference internal" href="#coalesceimages" id="id24">CoalesceImages</a></li>
@@ -385,7 +385,8 @@ MagickPassFail TransformImage( <a class="reference external" href="../api/types.
 </pre>
 <dl class="docutils">
 <dt>image:</dt>
-<dd>The image The transformed image is returned as this parameter.</dd>
+<dd>The image to transform. The resulting transformed image is
+returned via this parameter.</dd>
 <dt>crop_geometry:</dt>
 <dd>A crop geometry string.  This geometry defines a
 subregion of the image to crop.</dd>
